# libdnf

./: CMakeLists.txt
bindings/perl/: CMakeLists.txt
